--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -37,7 +37,9 @@
           <textarea class="form-control" name="inquiry[message]" rows="3" placeholder="Message"></textarea>
           <div class="captcha"></div>
           <input type="text" id="captcha" name="inquiry[captcha]" pattern="^.*\b(y4x3b|Y4X3B|y4x3B)\b.*$" class="form-control" placeholder="Retype Captcha*" required>
-          
+
+          <input style="margin: 15px 5px 0 0;" type="checkbox" name="inquiry[except_communication]" checked> Subscribe to email communications. <br>
+
           <input class="btn btn-custom" type="submit" value="Send Message">
         </form>
       </div>
