--- a/app/views/refinery/blog/admin/posts/_form.html.erb
+++ b/app/views/refinery/blog/admin/posts/_form.html.erb
@@ -54,6 +54,11 @@
   </div>
 
   <div class='field'>
+    <%= f.label :video_url -%>
+    <%= f.text_field :video_url -%>
+  </div>
+
+      <div class='field'>
     <%= f.label :tag_list, t('refinery.blog.shared.tags.title') -%>
     <%= f.text_field :tag_list, :class => 'larger' -%>
   </div>
