--- a/app/views/refinery/blog/categories/show.html.erb
+++ b/app/views/refinery/blog/categories/show.html.erb
@@ -14,7 +14,7 @@
 <% end %>
 
 <% content_for :side_body do %>
-  <%= render :partial => "/refinery/blog/shared/categories" %>
+  <%#= render :partial => "/refinery/blog/shared/categories" %>
 <% end %>
 
 <%= render :partial => "/refinery/content_page" %>
