--- a/app/views/refinery/blog/shared/_post.html.erb
+++ b/app/views/refinery/blog/shared/_post.html.erb
@@ -2,7 +2,12 @@
   <article class="blog_post" id="<%= dom_id(post) %>">
   <div class="col-xs-12 col-sm-6 col-md-4">
     <div class="blog_post_pod">
-      <%= link_to(image_fu(post.image, '360x272#c', :class=>"img-responsive"), refinery.blog_post_path(post)) %>
+      <%= link_to refinery.blog_post_path(post) do %>
+        <%= image_fu(post.image, '360x272#c', :class=>"img-responsive") %>
+      <% if post.video_url.present? %>
+        <div class='video_play'></div>
+      <% end %>
+      <% end %>
       <div class="caption cf">
         <div class="title"><%= link_to post.title, refinery.blog_post_path(post) %></div>
         <div class="date"><%= post.published_at.strftime('%B %e, %Y') %></div>
@@ -13,4 +18,5 @@
   </div>
 
   </article>
+    <!--/blog/categories/name of cat-->
 <% end %>
