--- a/app/views/layouts/accommodations.html.erb
+++ b/app/views/layouts/accommodations.html.erb
@@ -68,19 +68,19 @@
                         </div>
                         <div class="prices">
                           <div class="price-low">
-                            <img src="https://s31.postimg.org/5n3znglln/Web3_01.png">
+                            <img src="/assets/low.png">
                             $<%= @accommodation.low_rate %><span>pppn</span>
                           </div>
                           <div class="price-mid">
-                            <img src="https://s32.postimg.org/ek6alrzyd/Web2_01.png">
+                            <img src="/assets/mid.png">
                             $<%= @accommodation.mid_rate %><span>pppn</span>
                           </div>
                           <div class="price-high">
-                            <img src="https://s32.postimg.org/wo5jcwk2t/Web1_01_01_01.png">
+                            <img src="/assets/high.png">
                             $<%= @accommodation.high_rate %><span>pppn</span>
                           </div>
                           <div class="price-closed">
-                            <img src="https://s32.postimg.org/80isxqjj9/Web4_01.png">
+                            <img src="/assets/closed.png">
                             Closed
                           </div>
                         </div>
