--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -105,6 +105,9 @@
             <div class="col-xs-12 div1 truncate_text">
                 <%=raw @location.description %>
             </div>
+
+
+
             <div class="col-xs-12">
               <a href="#contact_area" class="btn btn-enquire btn-custom">Enquire Now</a>
               <!-- Modal -->
@@ -154,6 +157,32 @@
               </div>
               <%#= link_to 'Start Your Journey', '#contact', :class=>"btn btn-default btn-custom" %>
             </div>
+
+            <% if @location.low.present? %>
+                <div class="col-xs-12 col-sm-4">
+                  <div class="low">
+                    <h3>Low</h3>
+                    <a href="<%= @location.low %>" target="_blank">Click here</a>
+                  </div>
+                </div>
+            <% end %>
+            <% if @location.medium.present? %>
+                <div class="col-xs-12 col-sm-4">
+                  <div class="medium">
+                    <h3>Medium</h3>
+                    <a href="<%= @location.medium %>" target="_blank">Click here</a>
+                  </div>
+                </div>
+            <% end %>
+            <% if @location.high.present? %>
+                <div class="col-xs-12 col-sm-4">
+                  <div class="high">
+                    <h3>High</h3>
+                    <a href="<%= @location.high %>" target="_blank">Click here</a>
+                  </div>
+                </div>
+            <% end %>
+
           </div>
         </div>
       </div>
