--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -157,8 +157,8 @@
               </div>
               <%#= link_to 'Start Your Journey', '#contact', :class=>"btn btn-default btn-custom" %>
             </div>
+                        <% if @location.low.present? or @location.medium.present? or @location.high.present? %>
             <div class="col-xs-12 itineraries">
-            <% if @location.low.present? and @location.medium.present? and @location.high.present? %>
               <h2 class="itinerary">Travel Itinerary</h2>
               <p class="click">Click on one of the options below to browse a travel itinerary that suits your budget!</p>
               <% if @location.low.present? %>
@@ -182,9 +182,9 @@
                   </div>
                 </div>
               <% end %>
-            <% end %>
+            
             </div>
-
+<% end %>
           </div>
         </div>
       </div>
