--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -230,8 +230,12 @@ strong {font-weight:500;}
     textarea {padding:15px 0!important; height:auto;}
     .option-group {padding:20px 0; border-bottom:1px solid rgba(255,255,255,0.5);
       label {font-weight:300; float:left; line-height:18px;  margin:0; text-align:left;}
-      .option-input {-webkit-appearance: none; -moz-appearance: none; -ms-appearance: none; -o-appearance: none; appearance: none; position: relative; width: 15px; height: 15px; background:transparent; border:1px solid rgba(255,255,255,0.5); cursor: pointer; position: relative; z-index: 1000; padding:0; margin:0 15px 0 0; float:left;}
+      .option-input {-webkit-appearance: none; -moz-appearance: none; -ms-appearance: none; -o-appearance: none; appearance: none; position: relative; width: 15px; height: 15px; background:transparent; border:1px solid rgba(255,255,255,0.5); cursor: pointer; position: relative; z-index: 1000; padding:0; margin:0 10px 0 -5px; float:left;}
       .option-input:checked::before {background: $orange; width: 15px; height: 15px; position: absolute; content: '\2713'; display: inline-block; font-size: 12px; text-align: center; line-height: 15px;}
+    }
+    .budget-range {
+      .no-border {border:0!important;}
+      .middle {padding:0!important;}
     }
     ::-webkit-input-placeholder {color: #ffffff;}
     ::-moz-placeholder {color: #ffffff;}
