--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -9,15 +9,46 @@
           <input type="email" name="inquiry[email]" class="form-control" placeholder="Email*" required>
           <input type="text" name="inquiry[phone]" class="form-control" placeholder="Phone*" required>
           <input type="text" name="inquiry[destination]" class="form-control" placeholder="Travel Destination*" required>
-          <!--<input type="text" name="inquiry[budget]" class="form-control" placeholder="Budget*" required>-->
-          <div class="input-group">
-            <span class="input-group-addon currency-label">Budget per person*</span>
-            <input type="text" name="inquiry[budget]" class="form-control currency-amount" required>
-            <div class="input-group-addon currency-addon">
-              <select name="inquiry[currency]" class="currency-selector">
-                <option value="USD" selected>USD</option>
-                <option value="GBP" >GBP</option>
-              </select>
+          <input type="text" name="" class="form-control" placeholder="Holiday Duration (number of nights)*" required>
+          <div class="budget-range">
+            <div class="option-group no-border cf">
+              <div class="row">
+                <div class="col-xs-12">
+                  <label>Budget-range per person (based on a 14 night trip; excluding international flights)*</label>
+                </div>
+              </div>
+            </div>
+            <div class="option-group no-border middle cf">
+              <div class="row">
+                <div class="col-xs-12 col-sm-3">
+                  <label>GBP</label>
+                </div>
+                <div class="col-xs-12 col-sm-3">
+                  <input type="radio" class="form-control option-input" name="" value="2"><label>£3,000-£6,000</label>
+                </div>
+                <div class="col-xs-12 col-sm-3">
+                  <input type="radio" class="form-control option-input" name="" value="1"><label>£6,000-£10,000</label>
+                </div>
+                <div class="col-xs-12 col-sm-3">
+                  <input type="radio" class="form-control option-input" name="" value="0"><label>£10,000+</label>
+                </div>
+              </div>
+            </div>
+            <div class="option-group cf">
+              <div class="row">
+                <div class="col-xs-12 col-sm-3">
+                  <label>USD</label>
+                </div>
+                <div class="col-xs-12 col-sm-3">
+                  <input type="radio" class="form-control option-input" name="" value="2"><label>$4,000-$8,000</label>
+                </div>
+                <div class="col-xs-12 col-sm-3">
+                  <input type="radio" class="form-control option-input" name="" value="1"><label>$8,000-$13,000</label>
+                </div>
+                <div class="col-xs-12 col-sm-3">
+                  <input type="radio" class="form-control option-input" name="" value="0"><label>$13,000+</label>
+                </div>
+              </div>
             </div>
           </div>
           <input type="text" name="inquiry[from]" class="form-control" placeholder="Where are you from?*" required>
