--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -9,7 +9,7 @@
           <input type="email" name="inquiry[email]" class="form-control" placeholder="Email*" required>
           <input type="text" name="inquiry[phone]" class="form-control" placeholder="Phone*" required>
           <input type="text" name="inquiry[destination]" class="form-control" placeholder="Travel Destination*" required>
-          <input type="text" name="" class="form-control" placeholder="Holiday Duration (number of nights)*" required>
+          <input type="text" name="inquiry[number_of_nights]" class="form-control" placeholder="Holiday Duration (number of nights)*" required>
           <div class="budget-range">
             <div class="option-group no-border cf">
               <div class="row">
@@ -24,13 +24,13 @@
                   <label>GBP</label>
                 </div>
                 <div class="col-xs-12 col-sm-3">
-                  <input type="radio" class="form-control option-input" name="" value="2"><label>£3,000-£6,000</label>
+                  <input type="radio" class="form-control option-input" name="inquiry[budget]" value="£3,000-£6,000"><label>£3,000-£6,000</label>
                 </div>
                 <div class="col-xs-12 col-sm-3">
-                  <input type="radio" class="form-control option-input" name="" value="1"><label>£6,000-£10,000</label>
+                  <input type="radio" class="form-control option-input" name="inquiry[budget]" value="£6,000-£10,000"><label>£6,000-£10,000</label>
                 </div>
                 <div class="col-xs-12 col-sm-3">
-                  <input type="radio" class="form-control option-input" name="" value="0"><label>£10,000+</label>
+                  <input type="radio" class="form-control option-input" name="inquiry[budget]" value="£10,000+"><label>£10,000+</label>
                 </div>
               </div>
             </div>
@@ -40,13 +40,13 @@
                   <label>USD</label>
                 </div>
                 <div class="col-xs-12 col-sm-3">
-                  <input type="radio" class="form-control option-input" name="" value="2"><label>$4,000-$8,000</label>
+                  <input type="radio" class="form-control option-input" name="inquiry[budget]" value="$4,000-$8,000"><label>$4,000-$8,000</label>
                 </div>
                 <div class="col-xs-12 col-sm-3">
-                  <input type="radio" class="form-control option-input" name="" value="1"><label>$8,000-$13,000</label>
+                  <input type="radio" class="form-control option-input" name="inquiry[budget]" value="$8,000-$13,000"><label>$8,000-$13,000</label>
                 </div>
                 <div class="col-xs-12 col-sm-3">
-                  <input type="radio" class="form-control option-input" name="" value="0"><label>$13,000+</label>
+                  <input type="radio" class="form-control option-input" name="inquiry[budget]" value="$13,000+"><label>$13,000+</label>
                 </div>
               </div>
             </div>
