--- a/app/views/layouts/locations.html.erb
+++ b/app/views/layouts/locations.html.erb
@@ -238,7 +238,7 @@
                         <li>
                           <div class="safari-type-item">
                             <%= link_to refinery.activities_activity_path(item) do %>
-                              <%= image_fu item.image, "218x330#c" %>
+                              <%= image_fu item.image, "218x330#c", :alt => item.image.alt_tag if item.image.present? %>
                               <div class="caption">
                                 <h3><%= raw item.name %></h3>
                                 <div class="btn btn-custom">Read More</div>
@@ -273,7 +273,7 @@
                             <% if item == items.first %>
                               <div class="experience-item main-item">
                                 <%= link_to refinery.activities_activity_path(item) do %>
-                                  <%= image_fu item.image, '440x330#c' %>
+                                  <%= image_fu item.image, '440x330#c', :alt => item.image.alt_tag if item.image.present? %>
                                   <div class="caption">
                                     <h3><%= raw item.name %></h3>
                                   </div>
@@ -282,7 +282,7 @@
                             <% else %>
                               <div class="experience-item">
                                 <%= link_to refinery.activities_activity_path(item) do %>
-                                  <%= image_fu item.image, '217x162#c' %>
+                                  <%= image_fu item.image, '217x162#c', :alt => item.image.alt_tag if item.image.present? %>
                                   <div class="caption">
                                     <h3><%= raw item.name %></h3>
                                   </div>
@@ -324,7 +324,9 @@
                 <% blogs.each_with_index do |blog, index| %>
                   <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="recent-blog-item">
-                      <%= link_to(image_fu(blog.image, '490x380#c', :class=>"img-responsive"), refinery.blog_post_path(blog)) %>
+                      <% if blog.image.present? %>
+                        <%= link_to(image_fu(blog.image, '490x380#c', :class=>"img-responsive", :alt => blog.image.alt_tag), refinery.blog_post_path(blog)) %>
+                      <% end %>
                       <div class="caption cf">
                         <div class="title"><%= link_to blog.title, refinery.blog_post_path(blog) %></div>
                         <div class="date"><%= blog.published_at.strftime('%B %e, %Y') %></div>
@@ -443,7 +445,9 @@
                 <% blogs.each_with_index do |blog, index| %>
                     <div class="col-xs-12 col-sm-6 col-md-4">
                       <div class="recent-blog-item">
-                        <%= link_to(image_fu(blog.image, '490x380#c', :class=>"img-responsive"), refinery.blog_post_path(blog)) %>
+                        <% if blog.image.present? %>
+                          <%= link_to(image_fu(blog.image, '490x380#c', :class=>"img-responsive", :alt => blog.image.alt_tag), refinery.blog_post_path(blog)) %>
+                        <% end %>
                         <div class="caption cf">
                           <div class="title"><%= link_to blog.title, refinery.blog_post_path(blog) %></div>
                           <div class="date"><%= blog.published_at.strftime('%B %e, %Y') %></div>
