--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -96,9 +96,9 @@
     <div class="row">
       <div class="col-xs-12">
         <ul class="list list-inline">
-          <li><a href="<%= face %>" target="_blank"><img src="/assets/facebook.gif"></a></li>
-          <li><a href="<%= twit %>" target="_blank"><img src="/assets/twitter.gif"></a></li>
-          <li><a href="<%= ins %>" target="_blank"><img src="/assets/instagram.gif"></a></li>
+          <li><a href="<%= face %>" target="_blank"><img alt="facebook" src="/assets/facebook.gif"></a></li>
+          <li><a href="<%= twit %>" target="_blank"><img alt="twitter" src="/assets/twitter.gif"></a></li>
+          <li><a href="<%= ins %>" target="_blank"><img alt="instagram" src="/assets/instagram.gif"></a></li>
         </ul>
       </div>
     </div>
@@ -113,8 +113,8 @@
             :dom_id => 'list list-inline hidden-xs',
             :css => 'list list-inline hidden-xs'
         }) %>
-        <img src="/assets/bottom-logo.gif" class="logo">
-        <a href="https://www.caa.co.uk/atol-protection/" target="_blank" class="hidden-xs"><img src="/assets/atol.gif"></a>
+        <img alt="logo" src="/assets/bottom-logo.gif" class="logo">
+        <a href="https://www.caa.co.uk/atol-protection/" target="_blank" class="hidden-xs"><img alt="atol" src="/assets/atol.gif"></a>
         <div class="copyright">
           © Tailormade Africa &bull; All Rights Reserved &bull; <a href="http://www.perfectcircle.co.za" target="_blank">Website by Perfect Circle.</a><br/>
           <a href="/terms-conditions">Terms & Conditions</a> &bull; <a href="/bookings/new">Booking Form</a> &bull; <a href="/accommodations">Accommodation</a> &bull; <a href="/consumer-financial-protection">Consumer Financial Protection</a> &bull; <a href="/privacy-policy">Privacy Policy</a>
