--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,7 +47,7 @@ h1 {@include main_font (); font-size: 36px; margin: 30px 0; }
 h1.accommodation-name {@include slider_font ();position: absolute; z-index: 6; width: 100%; font-size: 100px; margin: 0; letter-spacing: 13px; line-height: normal; top: 50%; margin-top: -75px; text-transform:uppercase;}
 h1.accommodation-name span {font-size: 48px; margin: 20px; letter-spacing: 5px; display: block; line-height: 0;}
 h2 {@include main_font (); font-size: 24px; margin: 30px 0; }
-h3 {@include main_font (); font-size: 18px; margin: 30px 0; line-height:26px;}
+h3 {@include main_font (); font-size: 18px; margin: 30px 0; line-height:26px;text-align: left!important;}
 
 p,ol,ul,table {margin-bottom:20px;}
 
