--- a/app/views/layouts/accommodations.html.erb
+++ b/app/views/layouts/accommodations.html.erb
@@ -116,10 +116,9 @@
                     <% end %>
 
 
-                    <a href="#camps">Back to Camp Selection</a>
                   </div>
                   <div class="col-xs-12">
-                    <a type="button" class="btn btn-default btn-custom" data-toggle="modal" data-target="#myModal">Start Your Journey</a>
+                    <a href="#contact_area" class="btn btn-enquire btn-custom" style="margin-top:30px!important;">Enquire Now</a>
                     <!-- Modal -->
                     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                       <div class="modal-dialog" role="document">
