--- a/app/views/layouts/activities.html.erb
+++ b/app/views/layouts/activities.html.erb
@@ -27,7 +27,7 @@
                         <%= link_to(image_fu(activity.image, "80x80#c", :alt => activity.image.alt_tag),refinery.activities_activity_path(activity)) if activity.image.present? %>
                         <div class="search-item-body">
                           <h3><%= link_to strip_tags(activity.name), refinery.activities_activity_path(activity) %></h3>
-                          <div class="description"><%=raw truncate(activity.description, :length => 120) %></div>
+                          <div class="description"><%=raw activity.description %></div>
                         </div>
                       </li>
                     <% end %>
@@ -66,7 +66,7 @@
                         <%= link_to(image_fu(location.cover_image, "105x80#c", :alt => location.cover_image.alt_tag),refinery.locations_location_path(location)) if location.cover_image.present? %>
                         <div class="search-item-body">
                           <h3><%= link_to strip_tags(location.name), refinery.locations_location_path(location) %></h3>
-                          <div class="description"><%=raw truncate(location.description, :length => 120) %></div>
+                          <div class="description"><%=raw location.description %></div>
                         </div>
                       </li>
                     <% end %>
